--- a/fore-end/index.html
+++ b/fore-end/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
   <title>卖座电影</title>
+
+  <script src="./static/hotcss/hotcss.js"></script>
 </head>
 
 <body>
