--- a/fore-end/index.html
+++ b/fore-end/index.html
@@ -6,13 +6,16 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
   <title>卖座电影</title>
-
+  <link rel="stylesheet" href="//at.alicdn.com/t/font_957855_mnb37unfqz7.css">
   <script src="./static/hotcss/hotcss.js"></script>
 </head>
 
 <body>
   <div id="main"></div>
   <!-- built files will be auto injected -->
+
+  <!-- 引入百度apijs文件 -->
+  <script src="http://api.map.baidu.com/api?v=3.0&ak=PYK7wrx7sZaT7GU1S9cW7YCQfbWHFI27"></script>
 </body>
 
 </html>
