动画与路由

--- a/fore-end/index.html
+++ b/fore-end/index.html
@@ -8,6 +8,7 @@
   <title>卖座电影</title>
   <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_957855_mnb37unfqz7.css">
+  <link rel="stylesheet" href="./static/css/animate.css">
   <script src="./static/hotcss/hotcss.js"></script>
 </head>
 
