--- a/fore-end/index.html
+++ b/fore-end/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <meta name="hotcss" content="initial-dpr=1">
-  <title>卖座电影</title>
+  <title>猫眼电影</title>
   <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
   <link rel="stylesheet" href="//at.alicdn.com/t/font_957855_mnb37unfqz7.css">
   <link rel="stylesheet" href="./static/css/animate.css">
